<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.teg-iitr</groupId>
	<artifactId>matsim-iitr</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>matsim-iitr</name>

	<scm>
		<url>https://github.com/teg-iitr/matsim-iitr.git</url>
		<connection>scm:git:git://github.com/teg-iitr/matsim-iitr.git</connection>
		<developerConnection>scm:git:git@github.com:teg-iitr/matsim-iitr.git</developerConnection>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<matsim.version>12.0-SNAPSHOT</matsim.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<repositories>
		<repository>
			<id>matsim</id>
			<url>https://dl.bintray.com/matsim/matsim</url>
		</repository>
		<repository>
			<id>ojo-snapshots</id>
			<url>http://oss.jfrog.org/libs-snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>osgeo</id>
			<name>OSGeo Release Repository</name>
			<url>https://repo.osgeo.org/repository/release/</url>
			<snapshots><enabled>false</enabled></snapshots>
			<releases><enabled>true</enabled></releases>
		</repository>
		<!--OSM contrib uses this repo which I had to add here.-->
		<repository>
			<id>topobyte</id>
			<url>https://mvn.topobyte.de/</url>
		</repository>
		<repository>
			<id>slimjars</id>
			<url>http://mvn.slimjars.com/</url>
		</repository>
		<!--<repository>-->
			<!--&lt;!&ndash; Geotools is not on Maven central &ndash;&gt;-->
			<!--<id>osgeo</id>-->
			<!--<name>Geotools repository</name>-->
			<!--<url>http://download.osgeo.org/webdav/geotools</url>-->
		<!--</repository>-->
		<!-- <repository>
			for older jsprit versions. please migrate to new, they are on Maven 
				central 
			<id>jsprit-releases</id>
			<url>https://github.com/jsprit/mvn-rep/raw/master/releases</url>
		</repository> -->
		 <repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		 <!--<repository>-->
			<!--<id>matsim-vsp-vsp-playgrounds</id>-->
			<!--<url>https://packagecloud.io/matsim-vsp/vsp-playgrounds/maven2</url>-->
		<!--</repository>-->
	</repositories>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>${matsim.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>${matsim.version}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim-examples</artifactId>
			<version>${matsim.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>analysis</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.matsim-org</groupId>
			<artifactId>evacuation-gui</artifactId>
			<version>-SNAPSHOT</version>
		</dependency>
		<!-- <dependency>
			<groupId>com.vividsolutions</groupId>
			<artifactId>jts</artifactId>
			<version>1.13</version>
		</dependency>
		<dependency>
			<groupId>org.locationtech.jts</groupId>
			<artifactId>jts-core</artifactId>
			<version>1.16.1</version>
		</dependency> -->
		<dependency>
		<groupId>org.matsim.contrib</groupId>
		<artifactId>cadytsIntegration</artifactId>
		<version>${matsim.version}</version>
	</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>vsp</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>signals</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.matsim-org</groupId>
			<artifactId>Opdyts-MATSim-Integration</artifactId>
			<version>0.0.1-aa6d8cd2f3-1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
		<!-- <dependency> -->
		<!-- <groupId>org.apache.spark</groupId> -->
		<!-- <artifactId>spark-core_2.11</artifactId> -->
		<!-- <version>2.2.1</version> -->
		<!-- </dependency> -->
		<!--following is required to avoid exception (trying to access com.google.common.base.Stopwatch.init 
			which is not accessible anymore) -->
		<!-- <dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>18.0</version>
		</dependency>-->
		<dependency>
			<groupId>se.walkercrou</groupId>
			<artifactId>google-places-api-java</artifactId>
			<version>2.1.2</version>
		</dependency>
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch</artifactId>
			<version>0.1.55</version>
		</dependency>
		<!--<dependency>-->
		<!--<groupId>org.matsim.vsp.vsp-playgrounds</groupId>-->
		<!--<artifactId>vsp</artifactId>-->
		<!--<version>0.11.0-SNAPSHOT</version>-->
	<!--</dependency>-->
		<!--<dependency>-->
			<!--<groupId>org.matsim.vsp.vsp-playgrounds</groupId>-->
			<!--<artifactId>benjamin</artifactId>-->
			<!--<version>0.11.0-SNAPSHOT</version>-->
		<!--</dependency>-->
	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<excludes>
					<exclude>**/*$*</exclude> <!-- exclude all inner classes -->
				</excludes>
					<forkMode>once</forkMode>
					<argLine>-Xmx400m -Djava.awt.headless=true</argLine>
					<!--<enableAssertions>true</enableAssertions> &lt;!&ndash; this should be set to true, but we still have some tests that don't work otherwise... &ndash;&gt;-->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>org.matsim.gui.MATSimGUI</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>  <!-- Create sources.jar -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<defaultGoal>assembly:assembly</defaultGoal>
				<pluginManagement>
					<plugins>
						<plugin>
							<artifactId>maven-assembly-plugin</artifactId>
							<configuration>
								<descriptors>
									<descriptor>src/main/assembly/assembly-release.xml</descriptor>
								</descriptors>
							</configuration>
						</plugin>
						<plugin>
							<artifactId>maven-jar-plugin</artifactId>
							<configuration>
								<archive>
									<manifest>
										<addClasspath>true</addClasspath>
										<classpathPrefix>libs/</classpathPrefix>
									</manifest>
								</archive>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<!-- <dependency>
				<groupId>org.graphstream</groupId>
				<artifactId>gs-ui</artifactId>
				<version>1.3</version>
			</dependency> -->
			<!--<dependency>
				<groupId>org.graphstream</groupId>
				<artifactId>gs-core</artifactId>
				<version>1.3</version>
			</dependency> -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-math</artifactId>
				<version>2.2</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
